add ascii effect to the rendered scene

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <!-- SCRIPTS -->
     <script src="./src/three.min.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="./src/AsciiEffect.js"></script>
 
 </body>
 </html>
