minor styling changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
         initial-scale=1.0,
         maximum-scale=1.0,
         minimum-scale=1.0">
+
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./src/loading_app/loading_style.css">
-    <title>kulik.adrian</title>
+    <link rel="preload" as="image" href="./src/Projects/Facade Generator/facade generator.jpg">
+    <link rel="preload" as="image" href="./src/Projects/Augmented Reality/Augmented Reality.jpg">
+
+    <title>🐦🐦🐦</title>
+
 </head>
 <body>
 
@@ -52,35 +56,53 @@
                     I'm Adrian
                 </h1>
                 <h2 class="about__h2">
-                    I'm an <strong>award-winning</strong> photographer, who has a <strong>strong foothold</strong> in graphic design.
+                    I'm an <strong>award-winning</strong> photographer, who has a <strong>strong foothold</strong> in code and graphic design.
                     <br class="br-mobile">
-                    Currentely a video production <strong>team-leader</strong>, webdesign freelancer, nature lover and extreme sports enthusiast.
+                    Currentely a video production <strong>teamleader</strong>, webdesign freelancer, nature lover and extreme sports enthusiast.
                 </h2>
             </div>
         </div>
         <div class="projects" id="projects">
             <div class="projects__div">
                 <h1 class="projects__h1">
-                    Combining art
+                    I use technology
                     <br class="br-mobile">
-                    and technology
+                    to make art
                 </h1>
                 <h2 class="projects__h2">
-                    See <strong>the things</strong> that I've created
+                    See my <strong>selected</strong> projects. Click to <strong>check them out!</strong>
                 </h2>
                 <div class="projects__showcase">
-                    <figure>
-                        <img src="./src/Projects/Facade Generator/facade generator.jpg" alt="Photograph showing buildings cut out of paper.">
-                        <figcaption>Facade generator</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="./src/Projects/Augmented Reality/Augmented Reality.jpg" alt="Short video clip showing a virtual 3D object placed and tracked in real time in the real world">
-                        <figcaption>Augmented reality</figcaption>
-                    </figure>
+                    <a href="">
+                        <figure class="projects__showcase--figure">
+                            <img src="./src/Projects/Facade Generator/facade generator.jpg" alt="Photograph showing buildings cut out of paper.">
+                            <figcaption>Facade generator</figcaption>
+                        </figure>
+                    </a>
+                    <a href="">
+                        <figure class="projects__showcase--figure">
+                            <img src="./src/Projects/Augmented Reality/Augmented Reality.jpg" alt="Short video clip showing a virtual 3D object placed and tracked in real time in the real world">
+                            <figcaption>Augmented reality</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://deform.space">
+                        <figure class="projects__showcase--figure">
+                            <img src="./src/Projects/Augmented Reality/Augmented Reality.jpg" alt="Short video clip showing a virtual 3D object placed and tracked in real time in the real world">
+                            <figcaption>Augmented reality</figcaption>
+                        </figure>
+                    </a>
                 </div>
             </div>  
         </div>
         <div class="contact" id="contact">
+            <div class="contact__info">
+                <div class="contact__info--mail">
+                    <a href="mailto:adriankulik93@gmail.com" alt="Send me an email"><h1>adriankulik93@gmail.com</h1></a>
+                    <br>
+                    Don't be a stranger
+                </div>
+                <strong>See what I'm up to</strong>
+            </div>
         </div>
     </div>
 
@@ -92,7 +114,6 @@
     <script type="module" src="./src/3D/background_animation.js"></script>
     <script type="module" src="./src/AsciiEffect.js"></script>
     <script type="module" src="./src/3D/contact_animation.js"></script>
-    <script type="module" src="./src/loading_app/loading.js"></script>
 
 </body>
 </html>
