projects now link to external sites

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     See my <strong>selected</strong> projects. Click to <strong>check them out!</strong>
                 </h2>
                 <div class="projects__showcase">
-                    <a href="./src/Projects/Facade Generator/Responsive-Post-Soviet-Building-Facade-Generator-master/index.htm">
+                    <a href="https://adikko.github.io/Responsive-Post-Soviet-Building-Facade-Generator/">
                         <figure class="projects__showcase--figure">
                             <video preload="auto" loop="" autoplay="" playsinline="playsinline" muted="" src="./src/Projects/Facade Generator/Facade_generator.mp4" alt="Short video showing a growing post-soviet residential building facade"></video>
                             <figcaption>Facade generator</figcaption>
                         </figure>
                     </a>
-                    <a href="./src/Projects/Augmented Reality/DEFORM_XR-main/index.html">
+                    <a href="https://adikko.github.io/DEFORM_XR/">
                         <figure class="projects__showcase--figure">
                             <video preload="auto" loop="" autoplay="" playsinline="playsinline" muted="" src="./src/Projects/Augmented Reality/Augmented_reality.mp4" alt="Short video clip showing a virtual 3D object placed and tracked in real time in the real world"></video>
                             <figcaption>Augmented reality</figcaption>
