add bg under about div, revised contents

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                 <h2 class="about__h2">
                     I'm an <strong>award-winning</strong> photographer, who has a <strong>strong foothold</strong> in code and graphic design.
                     <br class="br-mobile">
-                    Currentely a video production <strong>teamleader</strong>, webdesign freelancer, nature lover and extreme sports enthusiast.
+                    <br class="br-mobile">
+                    Currentely a video production <strong>teamleader</strong> and a <strong>freelance webdesigner.</strong>
+                    <br class="br-mobile">
+                    <br class="br-mobile">
+                    After hours you may see me <strong>reading a book</strong> by the river, or <strong>shredding</strong> in the skatepark.
                 </h2>
             </div>
         </div>
@@ -93,12 +97,14 @@
             </div>  
         </div>
         <div class="contact" id="contact">
-            <div class="contact__info">
+            <div class="contact__div">
                 <h1 class="contact__h1">Don't be a stranger</h1>
-                <div class="contact__info--mail">
-                    <a href="mailto:adriankulik93@gmail.com" alt="Send me an email"><h1>adriankulik93@gmail.com</h1></a>
+                <div class="contact__details">
+                    <div class="contact__details--mail">
+                        <a href="mailto:adriankulik93@gmail.com" alt="Send me an email"><h1>adriankulik93@gmail.com</h1></a>
+                    </div>
+                    <strong>See what I'm up to</strong>
                 </div>
-                <strong>See what I'm up to</strong>
             </div>
         </div>
     </div>
