add footer links to social media and email as icon

--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
                     See my <strong>selected</strong> projects. Click to <strong>check them out!</strong>
                 </h2>
                 <div class="projects__showcase">
-                    <a href="https://adikko.github.io/Responsive-Post-Soviet-Building-Facade-Generator/">
+                    <a href="https://adriankulik.github.io/Responsive-Post-Soviet-Building-Facade-Generator/">
                         <figure class="projects__showcase--figure">
                             <video preload="auto" loop="" autoplay="" playsinline="playsinline" muted="" src="./src/Projects/Facade Generator/Facade_generator.mp4" alt="Short video showing a growing post-soviet residential building facade"></video>
                             <figcaption>Facade generator</figcaption>
                         </figure>
                     </a>
-                    <a href="https://adikko.github.io/DEFORM_XR/">
+                    <a href="https://adriankulik.github.io/DEFORM_XR/">
                         <figure class="projects__showcase--figure">
                             <video preload="auto" loop="" autoplay="" playsinline="playsinline" muted="" src="./src/Projects/Augmented Reality/Augmented_reality.mp4" alt="Short video clip showing a virtual 3D object placed and tracked in real time in the real world"></video>
                             <figcaption>Augmented reality</figcaption>
                         </figure>
                     </a>
-                    <a href="https://deform.space">
+                    <a href="https://adriankulik.github.io/DEFORM/">
                         <figure class="projects__showcase--figure">
                             <video preload="auto" loop="" autoplay="" playsinline="playsinline" muted="" src="./src/Projects/DeformSpace Landing/Deform_space_landing.mp4" alt="Short video clip showing a rotating logotype"></video>
                             <figcaption>Deform website</figcaption>
@@ -96,17 +96,45 @@
                 </div>
             </div>  
         </div>
-        <div class="contact" id="contact">
+        <footer class="contact" id="contact">
             <div class="contact__div">
                 <h1 class="contact__h1">Don't be a stranger</h1>
                 <div class="contact__details">
-                    <div class="contact__details--mail">
-                        <a href="mailto:adriankulik93@gmail.com" alt="Send me an email"><h1>adriankulik93@gmail.com</h1></a>
-                    </div>
-                    <strong>See what I'm up to</strong>
+                    <a href="mailto:adriankulik93@gmail.com">
+                        <img src="./src/svg/email.svg" alt="Envelope icon">
+                    </a>
+                    <a href="https://linkedin.com/in/adrian-kulik">
+                        <img src="./src/svg/linkedin.svg" alt="LinedIn social media icon">
+                    </a>
+                    <a href="https://github.com/adriankulik">
+                        <img src="./src/svg/github.svg" alt="GitHub social media icon">
+                    </a>
+                    <a href="https://instagram.com/adrian__kulik">
+                        <img src="./src/svg/instagram.svg" alt="Instagram social media icon">
+                    </a>
                 </div>
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222.13 104.9">
+                    <defs>
+                        <style>.cls-1{fill:none;}</style>
+                    </defs>
+                    <path class="cls-1" d="M485.76,294a7.71,7.71,0,0,0-5.74,2.42,9.16,9.16,0,0,0-2.36,6.67,9.39,9.39,0,0,0,2.36,6.73,7.89,7.89,0,0,0,11.48,0,10.69,10.69,0,0,0,0-13.4A7.67,7.67,0,0,0,485.76,294Z" transform="translate(-328.1 -217.29)"/>
+                    <path class="cls-1" d="M392.77,294a7.71,7.71,0,0,0-5.74,2.42,9.16,9.16,0,0,0-2.36,6.67,9.39,9.39,0,0,0,2.36,6.73,7.89,7.89,0,0,0,11.48,0,10.69,10.69,0,0,0,0-13.4A7.67,7.67,0,0,0,392.77,294Z" transform="translate(-328.1 -217.29)"/>
+                    <path class="cls-1" d="M347.73,294a7.71,7.71,0,0,0-5.74,2.42,9.16,9.16,0,0,0-2.36,6.67,9.39,9.39,0,0,0,2.36,6.73,7.89,7.89,0,0,0,11.48,0,10.69,10.69,0,0,0,0-13.4A7.67,7.67,0,0,0,347.73,294Z" transform="translate(-328.1 -217.29)"/>
+                    <polygon points="13.6 33.56 24.87 49.08 38.93 49.08 23.41 30.64 38.8 12.07 24.81 12.07 13.6 27.13 13.6 0 2.26 0 2.26 49.08 13.6 49.08 13.6 33.56"/>
+                    <path d="M377.85,264.88a14.65,14.65,0,0,0,7.49,1.89,14.29,14.29,0,0,0,6.53-1.49,12.45,12.45,0,0,0,4.68-3.95v5h11.34v-37H396.55v20.1a8.12,8.12,0,0,1-1.92,5.77,6.83,6.83,0,0,1-5.24,2.06,6.73,6.73,0,0,1-5.17-2.06,8.12,8.12,0,0,1-1.92-5.77v-20.1H371V251a18.7,18.7,0,0,0,1.79,8.43A12.68,12.68,0,0,0,377.85,264.88Z" transform="translate(-328.1 -217.29)"/>
+                    <rect x="87.95" width="11.34" height="49.08"/>
+                    <rect x="107.52" y="12.07" width="11.34" height="37.01"/>
+                    <polygon points="138.43 33.56 149.7 49.08 163.77 49.08 148.24 30.64 163.63 12.07 149.64 12.07 138.43 27.13 138.43 0 127.09 0 127.09 49.08 138.43 49.08 138.43 33.56"/>
+                    <rect x="171.99" y="38.21" width="50.14" height="10.88"/>
+                    <path d="M355.83,289.88a11.75,11.75,0,0,0-4.55-4.18,14.27,14.27,0,0,0-6.86-1.59,15.29,15.29,0,0,0-8.29,2.32,16.11,16.11,0,0,0-5.87,6.63,24.39,24.39,0,0,0,0,20.07,16.25,16.25,0,0,0,5.87,6.7,15,15,0,0,0,8.22,2.36,14.28,14.28,0,0,0,6.87-1.59,12.3,12.3,0,0,0,4.61-4.18v5.24h11.34v-37H355.83Zm-2.36,20a7.89,7.89,0,0,1-11.48,0,9.39,9.39,0,0,1-2.36-6.73,9.18,9.18,0,0,1,2.36-6.67,8,8,0,0,1,11.48,0,10.69,10.69,0,0,1,0,13.4Z" transform="translate(-328.1 -217.29)"/>
+                    <path d="M400.86,289.74a12.13,12.13,0,0,0-4.74-4.11,14.64,14.64,0,0,0-6.67-1.52,15.29,15.29,0,0,0-8.29,2.32,16.11,16.11,0,0,0-5.87,6.63,24.39,24.39,0,0,0,0,20.07,16.25,16.25,0,0,0,5.87,6.7,15.15,15.15,0,0,0,8.29,2.36,14.21,14.21,0,0,0,6.86-1.59,11.61,11.61,0,0,0,4.55-4.25v5.31H412.2V272.58H400.86v17.16Zm-2.35,20.1a7.89,7.89,0,0,1-11.48,0,9.39,9.39,0,0,1-2.36-6.73,9.18,9.18,0,0,1,2.36-6.67,8,8,0,0,1,11.48,0,10.69,10.69,0,0,1,0,13.4Z" transform="translate(-328.1 -217.29)"/>
+                    <path d="M431.77,290.8v-6.17H420.43v37h11.34V304.46q0-4.57,2.12-6.4c1.41-1.21,3.54-1.82,6.37-1.82l3.12-12a12.84,12.84,0,0,0-6.63,1.76A15,15,0,0,0,431.77,290.8Z" transform="translate(-328.1 -217.29)"/>
+                    <rect x="120.72" y="67.35" width="11.34" height="37.01"/>
+                    <path d="M493.86,289.88a11.75,11.75,0,0,0-4.55-4.18,14.27,14.27,0,0,0-6.86-1.59,15.29,15.29,0,0,0-8.29,2.32,16.11,16.11,0,0,0-5.87,6.63,24.39,24.39,0,0,0,0,20.07,16.25,16.25,0,0,0,5.87,6.7,15,15,0,0,0,8.22,2.36,14.28,14.28,0,0,0,6.87-1.59,12.3,12.3,0,0,0,4.61-4.18v5.24H505.2v-37H493.86Zm-2.36,20a7.89,7.89,0,0,1-11.48,0,9.39,9.39,0,0,1-2.36-6.73,9.18,9.18,0,0,1,2.36-6.67,8,8,0,0,1,11.48,0,10.69,10.69,0,0,1,0,13.4Z" transform="translate(-328.1 -217.29)"/>
+                    <path d="M536,284.24a14.81,14.81,0,0,0-6.57,1.43,11.82,11.82,0,0,0-4.64,3.88v-4.91H513.42v37h11.34v-20.1a8.14,8.14,0,0,1,1.92-5.77,7.54,7.54,0,0,1,10.34,0,8.14,8.14,0,0,1,1.92,5.77v20.1h11.28V300q0-7.36-3.88-11.57A13.37,13.37,0,0,0,536,284.24Z" transform="translate(-328.1 -217.29)"/>
+                </svg>
             </div>
-        </div>
+        </footer>
     </div>
 
     <!-- SCRIPTS -->
