updated social media icons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- LANDING PAGE ANIMATION -->
     <div class="background" id="home">
         <div class="background__logo">
-            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222.13 104.9">
+            <svg id="Layer_1" alt="Logotype. The upper line says `Adrian`, while the lower one says `Kulik`" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222.13 104.9">
                 <defs>
                     <style>.cls-1{fill:none;}</style>
                 </defs>
@@ -113,7 +113,7 @@
                         <img src="./src/svg/instagram.svg" alt="Instagram social media icon">
                     </a>
                 </div>
-                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222.13 104.9">
+                <svg id="Layer_1" alt="Logotype. The upper line says `Adrian`, while the lower one says `Kulik`" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222.13 104.9">
                     <defs>
                         <style>.cls-1{fill:none;}</style>
                     </defs>
