added favicon, changed style in mobile contact

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         minimum-scale=1.0">
 
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" type="image/png" href="./src/favicon/favicon.png">
 
     <title>🐦🐦🐦</title>
 
