chore: updated links

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <figcaption>Deform website</figcaption>
                         </figure>
                     </a>
-                    <a href="http://cdv2022.wroc.xyz">
+                    <a href="https://github.com/adriankulik/portfolio.git">
                         <figure class="projects__showcase--figure">
                             <video preload="auto" loop="" autoplay="" playsinline="playsinline" muted="" src="./src/Projects/CodingDaVinci OST3/liquitecture.mp4" alt="Short video clip showing 3D game playthrough"></video>
                             <figcaption>Liquitecture game</figcaption>
